--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,6 +31,8 @@ body{
     margin: 0;
     font-weight: bold;
     font-size: 16px;
+    text-decoration: none;
+    color: black;
 }
 .navigation_links a{
     text-decoration: none;
